blue-green-ns/method1/green-dep.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask-ns-green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-green
  namespace: flask-ns-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-green
  template: 
    metadata:
      name: flask-pod-green
      labels: 
        app: flask-app-green        
    spec:
      containers:
        - name: flask-app-container-green
          image: akhilmovva/flask-image:dev
          ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-svc-green
  namespace: flask-ns-green
  labels: 
    app: flask-app-green
spec:
  # type: NodePort #LoadBalancer  
  selector:
    app: flask-app-green
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 5000 # Container Port
      # nodePort: 31213 # NodePort
